fix: sincronizar escopos de comandos padrão
